--- a/src/app/components/qr-scanner-modal/qr-scanner-modal.component.html
+++ b/src/app/components/qr-scanner-modal/qr-scanner-modal.component.html
@@ -5,6 +5,9 @@
       <i class="material-icons">qr_code_scanner</i>
       {{ data.title }}
     </h2>
+    <button class="btn-close-x" mat-icon-button (click)="closeModal()" aria-label="Đóng">
+      <i class="material-icons">close</i>
+    </button>
   </div>
 
   <!-- Modal Content -->
